tests/parsing/smtlib/v2.6/errors/141_datatype_arity_dec_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/141_datatype_arity_dec_bad_name_1.smt2", line 2, character 21-22:
2 | (declare-datatypes ((_)))
                         ^
Error while parsing a datatype arity declaration, read the reserved word '_',
      but expected a symbol for the datatype name.
